<resources>
    <string name="app_name">Спеўнік</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2762019052396240/1577836946</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="confirm">Пацвердзіць</string>
    <string name="cancel">Адмена</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="find">Пошук</string>
    <string name="all">Усе</string>
    <string name="parts">Часткі імшы</string>
    <string name="short_songs">Кароткія</string>
    <string name="long_songs">Доўгія</string>
    <string name="main">Галоўная</string>
    <string name="playlists">Плэйлісты</string>
    <string name="information">Інфармацыя</string>
    <string name="options">Налады</string>
    <string name="random_song">Выпадковая песня</string>
    <string name="propose_song">Прапанаваць песню</string>
    <string name="help_project">Дапамагчы праекту</string>
    <string name="main_information">Асноўная</string>
    <string name="made_by_flynid">Зроблена FlyNid</string>
    <string name="waladarka">Санктуарый Маці Божай Валадаркі Азёраў</string>
    <string name="braslaw">Браслаў</string>
    <string name="_2022">2022</string>
    <string name="connection">Сувязь</string>
    <string name="mail">flynidDev@gmail.com</string>
    <string name="audio_adding">Добаўленне аўдыазапісу</string>
    <string name="fill_in_the_form">Запоўніце невялікую форму</string>
    <string name="choose_song_from_existing">выбраць песню з існуюшчых</string>
    <string name="your_name">Вашае імя</string>
    <string name="name">Імя</string>
    <string name="songs_author">Аўтар песні (калі вядома)</string>
    <string name="author">Аўтар</string>
    <string name="youtube_googledisk">Спасылка на аўдыяфайл (YouTube, GoogleDisk...)</string>
    <string name="link">Спасылка</string>
    <string name="you_can_add_audiofile1">або вы можаце</string>
    <string name="you_can_add_audiofile2">дапасаваць аўдыяфайл </string>
    <string name="you_can_add_textfile2">дапасаваць тэкставы файл </string>
    <string name="no_connection">Няма падключэння да інтэрнету</string>
    <string name="send">адправіць</string>
    <string name="error">Памылка</string>
    <string name="cancel_low">адменіць</string>
    <string name="success_thaks">Даныя паспяхова адпраўлены, дзякуй!</string>
    <string name="enter_your_name">Увядзіце ваша імя і спасылку на аўдыяфайл, альбо дадайце аўдыязапіс</string>
    <string name="song_adding">Дабаўленне песні</string>
    <string name="title_of_the_song">Назва песні</string>
    <string name="title">Назва</string>
    <string name="text_and_chords">Тэкст і акорды</string>
    <string name="you_can_add_audio">Вы можаце дадаць аўдыязапіс</string>
    <string name="checked">выбрана</string>
    <string name="song">Песня </string>
    <string name="already_in_fav"> ужо ёсць у абраным</string>
    <string name="incorrect_name">Гэтая назва недаступна</string>
    <string name="update_is_available">Новая версія даступна!</string>
    <string name="please_update">Калі ласка, абнавіце праграму</string>
    <string name="update">Абнавіць</string>
    <string name="skip_update">Прапусціць абнаўленне</string>
    <string name="the_most_popular_catholics_songs">Самыя папулярныя каталіцкія песні з словами и акордами</string>
    <string name="projects_help">Дапамога праекту</string>
    <string name="how_can_you_help_us">Як вы можаце дапамагчы нам</string>
    <string name="help_money">Дапамагчы фінанасава</string>
    <string name="your_money">Вашыя грошы пойдуць на далейшае развіццё праекту</string>
    <string name="add_song">Дабавіць песню</string>
    <string name="add_song_library">Прапануйце песню, якую можна дабавіць да бібліятэкі.</string>
    <string name="add_audio_to_song">Дабавіць аўдыязапіс к существующей песне</string>
    <string name="help_add_audio_to_all_songs">Дапамагіце зрабіць так, каб усе песні можна было паслухаць</string>
    <string name="watch_ad">Паглядзець рэкламу</string>
    <string name="watch_ad_to_help_us">Паглядзіце кароткую рэкламу, каб дапамагчы праекту</string>
    <string name="show_chords">Паказваць акорды</string>
    <string name="transpose">Транспанаваць</string>
    <string name="change_chords_color">Змяніць колер акордаў</string>
    <string name="dark_theme">Цёмная тэма</string>
    <string name="text_size">Размер шрыфту</string>
    <string name="accept">Прыняць</string>
    <string name="choosing_color">Выбар колеру</string>
    <string name="accept_exit">Пацвердзіце выхад</string>
    <string name="there_are_unsaved_options">Ёсць змены ў наладах</string>
    <string name="cancel_exit">Адмяніць выхад</string>
    <string name="exit">Выйсці</string>
    <string name="impossible_to_delete_playlist">Немагчыма выдаліць гэты плэйліст</string>
    <string name="impossible_to_rename_playlist">Немагчыма перайменаваць гэты плэйліст</string>
    <string name="enter_new_name">Увядзіце новую назву</string>
    <string name="change_name">Змяніце назву</string>
    <string name="there_arent_songs_yet_do_you_want_add">Тут яшчэ нічога няма. Хочаце дадаць?</string>
    <string name="add">Дадаць</string>
    <string name="listen">паслухаць</string>
    <string name="check_internet_connection">Праверце падключэнне да інтэрнету</string>
    <string name="there_is_not_audio">Запіс песні адсутнічае</string>
    <string name="add_to_playlist">Дадаць у плейліст</string>
    <string name="new_playlist">Новы плейліст</string>
    <string name="close">Зачыніць</string>
    <string name="playlists_name">Назва плэйліста</string>
    <string name="delete_from_playlist">Выдаліць з плейліста</string>
    <string name="add_to_fav">Дадаць да абранага</string>
    <string name="changing_name">Змяніць назву</string>
    <string name="delete_playlist">Выдаліць плэйліст</string>
    <string name="add_songs_to_playlist">Дадаць песні ў плейліст</string>
    <string name="updation">Абнаўленне!</string>
    <string name="ok">OK</string>
    <string name="add_new_functions">Дададзена функцыя праслухоўвання некаторых песень. Запісы будуць паступова дадавацца.</string>
    <string name="if_you_have_some_propositions">Калі вы маеце прапановы песень (або запісаў да ўжо дададзеных песень), якіх яшчэ няма ў дадатку, зараз вы можаце адправіць іх нам, запоўніўшы спецыяльную форму. (гл. "Дапамога праекту"). Мы дададзім іх у бібліятэку ў бліжэйшым абнаўленні.</string>
    <string name="new_songs_were_added">Дададзены новыя песні, выпраўлены абдрукоўкі.</string>
    <string name="new_possibility_sup">Дададзена магчымасць падтрымаць праект матэрыяльна (гл. "Дапамога праекту").</string>
    <string name="_0">0 выбрана</string>
    <string name="favourite">Абранае</string>
    <string name="thanks">Дзякуй!</string>
    <string name="try_again">Паспрабуйце зноў</string>
    <string name="you_have_already_watched">Вы ўжо паглядзелі рэкламу</string>
</resources>
