<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/C1"
    android:orientation="vertical"
    tools:context=".addaudioactivity" >

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="1dp"
        android:visibility="invisible" />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addaudioactivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backbtn3"
            android:layout_width="77.93dp"
            android:layout_height="65.93dp"
            android:paddingLeft="30.63dp"
            android:paddingTop="24.63dp"
            android:paddingRight="30.63dp"
            android:paddingBottom="24.63dp"
            app:srcCompat="@drawable/yellowback" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="22.17dp"
            android:fontFamily="@font/myfont"
            android:text="@string/audio_adding"
            android:textColor="@color/C2"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/myfont"
            android:text="@string/fill_in_the_form"
            android:textColor="@color/C2"
            android:textSize="18dp"
            android:textStyle="normal" />
        <TextView
            android:id="@+id/choosesong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/myfont"
            android:text="@string/choose_song_from_existing"
            android:textColor="#FFC700"
            android:textSize="16dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/myfont"
            android:text="@string/your_name"
            android:textColor="@color/C2"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameedit2"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="26dp"
            android:background="@drawable/edittextbackground"
            android:ems="10"
            android:fontFamily="@font/myfont"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingLeft="21dp"
            android:textColorHint="@color/C2"
            android:textColor="@color/C2"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/myfont"
            android:text="@string/songs_author"
            android:textColor="@color/C2"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/authoredit2"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="26dp"
            android:background="@drawable/edittextbackground"
            android:ems="10"
            android:fontFamily="@font/myfont"
            android:hint="@string/author"
            android:inputType="textPersonName"
            android:paddingLeft="21dp"
            android:textColorHint="@color/C2"
            android:textColor="@color/C2"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="156dp"
            android:layout_height="34dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/myfont"
            android:text="@string/youtube_googledisk"
            android:textColor="@color/C2"
            android:textSize="14dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/linkedit2"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="26dp"
            android:background="@drawable/edittextbackground"
            android:ems="10"
            android:fontFamily="@font/myfont"
            android:hint="@string/link"
            android:inputType="textPersonName"
            android:paddingLeft="21dp"
            android:textColorHint="@color/C2"
            android:textColor="@color/C2"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/musfileaddbtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/myfont"
            android:text="@string/you_can_add_audiofile1"
            android:textColor="@color/C2"
            android:textSize="12dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/canseltext3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginRight="44dp"
            android:fontFamily="@font/myfont"
            android:gravity="center"
            android:text="@string/cancel_low"
            android:textColor="#FFD645"
            android:textSize="12dp"
            android:textStyle="bold"
            android:visibility="invisible" />
        <Button
            android:id="@+id/sendbtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="52dp"
            android:layout_marginRight="27dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/addsongbtn"
            android:fontFamily="@font/myfont"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
</RelativeLayout>