<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00E5E5E5"
    tools:context=".MainActivity"
    tools:openDrawer="start"
    >
    <!--  tools:openDrawer="start"  для того, чтобы видеть в редакторе navigationview -->

    <RelativeLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@color/C5">

        <ImageButton
            android:id="@+id/acceptbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="-3dp"
            android:background="#00000000"
            android:clickable="true"
            android:paddingLeft="31dp"
            android:paddingTop="23dp"
            android:paddingRight="31dp"
            android:paddingBottom="23dp"
            android:src="@drawable/galochka"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/morebtnchecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:clickable="true"
            android:paddingLeft="31dp"
            android:paddingTop="23dp"
            android:paddingRight="31dp"
            android:paddingBottom="23dp"
            android:src="@drawable/showmorebtnchecked"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/closebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:clickable="true"
            android:paddingLeft="31dp"
            android:paddingTop="23dp"
            android:paddingRight="31dp"
            android:paddingBottom="23dp"
            android:src="@drawable/cancel"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/howmanychecked"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/myfont"
            android:gravity="center"
            android:text="0 выбрано"
            android:textColor="@color/C2"
            android:textSize="18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/C1"
        tools:context=".MainActivity"
        tools:openDrawer="start">


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignBottom="@id/editText"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="-52dp"
            android:scrollbarSize="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/allsongs"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="44dp"
                    android:layout_marginRight="44dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/myfont"
                    android:onClick="allsongs"
                    android:text="@string/all"
                    android:textColor="@color/C2"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/xsongs"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="44dp"
                    android:layout_marginRight="44dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/myfont"
                    android:onClick="xsongs"
                    android:text="@string/parts"
                    android:textColor="@color/C4"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/shortsongs"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="44dp"
                    android:layout_marginRight="44dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/myfont"
                    android:onClick="shortsongs"
                    android:text="@string/short_songs"
                    android:textColor="@color/C4"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/longsongs"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="44dp"
                    android:layout_marginRight="44dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/myfont"
                    android:onClick="longsongs"
                    android:text="@string/long_songs"
                    android:textColor="@color/C4"
                    android:textSize="16dp" />

            </LinearLayout>
        </HorizontalScrollView>

        <ImageButton
            android:id="@+id/menubtn"
            android:layout_width="75dp"
            android:layout_height="87dp"
            android:layout_alignParentLeft="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/C1"
            android:paddingLeft="32dp"
            android:paddingTop="37dp"
            android:paddingRight="19dp"
            android:paddingBottom="27.5dp"
            android:scaleType="fitXY"
            ads:srcCompat="@drawable/menu2" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="1dp"
            android:visibility="invisible" />

        <ListView
            android:id="@+id/namess"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="156dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:layout_marginBottom="70dp"
            android:divider="@color/C1"
            android:dividerHeight="10.5px"
            android:listSelector="@android:color/transparent"
            android:longClickable="true"
            android:paddingBottom="10dp"
            android:scrollbarSize="0sp"
            android:scrollbars="none"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent">

        </ListView>

        <EditText
            android:id="@+id/editText"
            android:layout_width="304dp"
            android:layout_height="32dp"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:background="@drawable/editstyle"
            android:drawableRight="@drawable/search"
            android:ems="10"
            android:fontFamily="@font/myfont"
            android:hint="@string/find"
            android:inputType="textPersonName"
            android:paddingLeft="12dp"
            android:paddingRight="8dp"
            android:textColorHint="@color/C2"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/C2"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="10dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent">

        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/C1">

            <TextView
                android:id="@+id/helpbtn"
                android:layout_width="163dp"
                android:layout_height="39dp"
                android:layout_alignBottom="@id/addsong"
                android:layout_marginStart="42dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="-58.5dp"
                android:background="@drawable/helpbtnstyle"
                android:fontFamily="@font/myfont"
                android:gravity="center"
                android:paddingRight="6dp"
                android:text="@string/help_project"
                android:textColor="@color/C2">

            </TextView>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="11dp"
                android:layout_height="11dp"
                android:layout_alignRight="@id/helpbtn"
                android:layout_alignBottom="@id/addsong"
                android:layout_centerHorizontal="false"
                android:layout_marginRight="9dp"
                android:layout_marginBottom="-47dp"
                ads:srcCompat="@drawable/like3" />

            <TextView
                android:id="@+id/addsong"
                android:layout_width="194dp"
                android:layout_height="34dp"

                android:layout_alignBottom="@id/randomsong"
                android:layout_marginStart="60dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="-58.5dp"
                android:fontFamily="@font/myfont"
                android:gravity="center_vertical"
                android:text="@string/propose_song"
                android:textColor="@color/C2" />

            <TextView
                android:id="@+id/randomsong"
                android:layout_width="194dp"
                android:layout_height="34dp"

                android:layout_alignBottom="@id/optionstextbtn"
                android:layout_marginStart="60dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="-58.5dp"
                android:fontFamily="@font/myfont"
                android:gravity="center_vertical"
                android:text="@string/random_song"
                android:textColor="@color/C2" />




            <TextView
                android:id="@+id/optionstextbtn"
                android:layout_width="194dp"
                android:layout_height="34dp"

                android:layout_alignBottom="@id/aboutustextbtn"
                android:layout_marginStart="60dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="-59.5dp"
                android:fontFamily="@font/myfont"
                android:gravity="center_vertical"
                android:text="@string/options"
                android:textColor="@color/C2" />




            <TextView
                android:id="@+id/aboutustextbtn"
                android:layout_width="194dp"
                android:layout_height="34dp"

                android:layout_alignBottom="@id/playlisttextbtn"
                android:layout_marginStart="60dp"

                android:layout_marginTop="1dp"
                android:layout_marginBottom="-67dp"
                android:fontFamily="@font/myfont"
                android:gravity="center_vertical"
                android:text="@string/information"
                android:textColor="@color/C2" />

            <TextView
                android:id="@+id/playlisttextbtn"
                android:layout_width="196dp"
                android:layout_height="wrap_content"

                android:layout_alignBottom="@id/maintextbtn"

                android:layout_marginStart="60dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="-58dp"
                android:fontFamily="@font/myfont"
                android:text="@string/playlists"
                android:textColor="@color/C2" />



            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="51dp"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="47dp"
                ads:srcCompat="@drawable/icon" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/imageView3"
                android:layout_marginStart="48.38dp"
                android:layout_marginLeft="48.38dp"
                android:layout_marginTop="53.17dp"
                android:fontFamily="@font/myfont"
                android:text="Спеўнік"
                android:textColor="@color/C2"
                android:textSize="14sp" />



            <TextView
                android:id="@+id/maintextbtn"
                android:layout_width="196dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="60dp"
                android:layout_marginTop="142dp"
                android:fontFamily="@font/myfont"
                android:text="@string/main"
                android:textColor="@color/C2" />

        </RelativeLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>